--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,6 @@ html {
     z-index: 1100;
 }
 
-
-
-
 /* FONDO COLOR MENÚ SCROLL*/
 .collapse.navbar-collapse {
     position: fixed;
@@ -89,9 +86,7 @@ html {
     z-index: 1100;
 }
 
-
-
-/* video */
+/* VIDEO */
 .video-header {
     position: relative;
     width: 100%;
@@ -166,8 +161,6 @@ html {
     padding: 2em;
 }
 
-
-
 /* LO PRINCIPAL */
 
 .card {
@@ -203,7 +196,7 @@ html {
     background: linear-gradient(transparent, #150067); 
 }
 
-/* POPUP */
+/* POPUP LO PRINCIPAL*/
 
 .modal-content {
     background-color: var(--intenso); 
@@ -226,9 +219,182 @@ html {
     box-shadow: none; 
 }
 
+/* CREATE */
+.section-with-margins {
+    margin-bottom: 0; /* Eliminar o reducir el espacio inferior */
+  }
+  
+  /* General styling */
+  .left-section,
+  .right-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  /* Left Section */
+  .left-section {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .left-section img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .overlay-text {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    font-size: 0.8rem;
+    color: white;
+    z-index: 1;
+  }
+  
+  .left-section h1 {
+    position: absolute;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: white;
+    z-index: 1;
+  }
+  
+  /* Right Section */
+  .right-section {
+    color: var(--ultravioleta);
+    text-align: center;
+  }
+  
+  .right-section h2 {
+    font-size: 3rem;
+    font-weight: bold;
+  }
+  
+  /* Media query for tablet and mobile */
+  @media (max-width: 768px) {
+    .row {
+      display: flex;
+    }
+  
+    .left-section,
+    .right-section {
+      height: auto; /* Use natural height */
+    }
+  
+    .left-section h1,
+    .right-section h2 {
+      font-size: 2rem; /* Adjust font size for better readability */
+      padding: 1rem; /* Add padding for spacing */
+    }
+  }
+  
+/* ABONOS */
 
+.title {
+    font-size: 3rem;
+    color: var(--neon);
+    font-weight: bold;
+    text-align: center;
+}
+.subtitle {
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    color: var(--intenso);
+    text-align: center;
+}
+.tickets {
+    background: linear-gradient(#150067, #3300ff); 
+    color: white;
+    border-radius: 15px;
+    padding: 2rem;
+    margin: 10px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.btn-custom {
+    background-color: transparent;
+    border: 2px solid #3300ff;
+    border-radius: 30px;
+    padding: 10px 30px; 
+    color: var(--neon);
+    font-weight: bold;
+    cursor: pointer;
+    display: inline-block; 
+    transition: all 0.3s ease;
+    text-align: center;
+    text-decoration: none;
+}
+
+.btn-custom:hover {
+    background-color: #1b1464;
+    color: white;
+}
+
+/* MODAL2 */
+.modal-dialog2 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    width: 50vw;
+    height: 50vw; 
+    max-width: 100px;
+    max-height: 100px; 
+    min-width: 240px; 
+    min-height: 120px; 
+}
+
+.modal-content2 {
+    background-color: #ffffff;
+    color: #3300ff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 100%; 
+    height: 100%; 
+}
+
+.modal-title2 {
+    font-size: 1rem; 
+    font-weight: bold;
+    color: #3300ff;
+}
+
+.btn-close2 {
+    filter: invert(100%);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.modal-body2 {
+    font-size: 1rem; 
+    line-height: 1.5;
+    overflow-y: auto; 
+}
+
+#countdown {
+    font-size: 1rem; 
+    color: #3300ff;
+    font-weight: bold;
+}
 
 /* ARTISTAS */
+  
+.collection {
+  margin-top: -6rem;
+  margin-bottom: -6rem;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+  
 .collection {
   height: 100vh;
   display: flex;
@@ -275,132 +441,6 @@ html {
   color: #ffffff;
   margin: 0;
 }
-
-
-
-
-
-/* ABONOS */
-
-.title {
-    font-size: 3rem;
-    color: var(--neon);
-    font-weight: bold;
-    text-align: center;
-}
-.subtitle {
-    font-size: 1.2rem;
-    margin-bottom: 2rem;
-    color: var(--intenso);
-    text-align: center;
-}
-.tickets {
-    background: linear-gradient(#150067, #3300ff); 
-    color: white;
-    border-radius: 15px;
-    padding: 2rem;
-    margin: 10px;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-.btn-custom {
-    background-color: transparent;
-    border: 2px solid #3300ff;
-    border-radius: 30px;
-    padding: 10px 30px; 
-    color: var(--neon);
-    font-weight: bold;
-    cursor: pointer;
-    display: inline-block; 
-    transition: all 0.3s ease;
-    text-align: center;
-    text-decoration: none;
-}
-
-.btn-custom:hover {
-    background-color: #1b1464;
-    color: white;
-}
-
-
-/* ZETA RADIO */
-#radio {
-    text-align: center;
-}
-.video-radio-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 20px;
-}
-
-#radio .video-radio {
-    width: 100%;
-    max-width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#radio video {
-    width: 100%;
-    max-width: 100vw;
-    height: auto;
-    max-height: 60vh;
-    object-fit: cover;
-    display: block;
-}
-
-
-
-
-
-
-/* Footer */
-
-.footer {
-    background-color: var(--white);
-    padding: 40px 0;
-    color: var(--neon);
-    text-align: center;
-}
-
-.footer-title {
-    font-size: 10rem;
-    font-weight: bold;
-    color: var(--neon);
-}
-
-.social-icons img {
-    width: 40px;
-}
-
-.social-icons a {
-    color: var(--neon);
-    font-size: 30px; 
-    margin: 0 10px;
-    transition: color 0.3s ease;
-}
-
-.social-icons a:hover {
-    color: var(--ultravioleta);
-}
-
-.links-grid a {
-    color: var(--neon);
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.links-grid a:hover {
-    color: var(--ultravioleta);
-}
-
-
 
 /* NEWS */
 #news .card {
@@ -463,7 +503,35 @@ html {
   }
 }
 
+/* ZETA RADIO */
+#radio {
+    text-align: center;
+}
+.video-radio-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+}
 
+#radio .video-radio {
+    width: 100%;
+    max-width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#radio video {
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    max-height: 60vh;
+    object-fit: cover;
+    display: block;
+}
 /* DERECHA A IZQUIERDA */
 
 .gallery-container {
@@ -573,57 +641,48 @@ input:focus {
     background-color: var(--ultravioleta);
 }
 
+/* Footer */
 
-/* CREATE */
-
-.left-section {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
-    padding: 0;
-  }
-
-  .left-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-  .overlay-text {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-size: 0.8rem;
-    color: white;
-    z-index: 1;
-  }
-
-  .left-section h1 {
-    position: absolute;
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: white;
-    z-index: 1;
-  }
-
-  .right-section {
-    color: var(--ultravioleta);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.footer {
+    background-color: var(--white);
+    padding: 40px 0;
+    color: var(--neon);
     text-align: center;
-    height: 100vh;
-  }
+}
 
-.right-section h2 {
-    font-size: 3rem;
+.footer-title {
+    font-size: 10rem;
     font-weight: bold;
+    color: var(--neon);
 }
 
-.row h-100{
-  display: flex;
-
+.social-icons img {
+    width: 40px;
 }
+
+.social-icons a {
+    color: var(--neon);
+    font-size: 30px; 
+    margin: 0 10px;
+    transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+    color: var(--ultravioleta);
+}
+
+.links-grid a {
+    color: var(--neon);
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.links-grid a:hover {
+    color: var(--ultravioleta);
+}
+
+
+
+
+
+
