--- a/paginas/css/style_compra.css
+++ b/paginas/css/style_compra.css
@@ -186,6 +186,43 @@ p{
     background-color: var(--intenso);
 }
 
+/* Estilo del popup carrito */
+.popup3 {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup3-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 400px;
+    width: 90%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn-custom3 {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: var(--neon);
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.btn-custom3:hover {
+    background-color: var(--intenso);
+}
 
 
 /* Footer */
